--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"argon2": "^0.30.3",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.0",
+		"morgan": "^1.10.0",
 		"passport": "^0.6.0",
 		"passport-jwt": "^4.0.1",
 		"reflect-metadata": "^0.1.13",
@@ -49,6 +50,7 @@
 		"@types/supertest": "^2.0.11",
 		"@typescript-eslint/eslint-plugin": "^5.0.0",
 		"@typescript-eslint/parser": "^5.0.0",
+		"chalk": "^4.1.2",
 		"eslint": "^8.0.1",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
